test/IDE/newtype.code
// RUN: %empty-directory(%t)
// RUN: %build-clang-importer-objc-overlays
// RUN: %target-language-ide-test(mock-sdk: %clang-importer-sdk-nosource) -I %t -I %S/Inputs/custom-modules -print-module -source-filename %s -module-to-print=Newtype -skip-unavailable -access-filter-public > %t.printed.A.txt
// RUN: %FileCheck %s -check-prefix=PRINT -strict-whitespace < %t.printed.A.txt
// RUN: %target-typecheck-verify-language -sdk %clang-importer-sdk -I %S/Inputs/custom-modules -I %t
// REQUIRES: objc_interop

// PRINT-LABEL: struct ErrorDomain : _ObjectiveCBridgeable, Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(_ rawValue: String)
// PRINT-NEXT:    init(rawValue: String)
// PRINT-NEXT:    var rawValue: String { get }
// PRINT-NEXT:    typealias RawValue = String
// PRINT-NEXT:    typealias _ObjectiveCType = NSString
// PRINT-NEXT:  }
// PRINT-NEXT:  extension ErrorDomain {
// PRINT-NEXT:    fn process()
// PRINT-NEXT:    static immutable one: ErrorDomain
// PRINT-NEXT:    static immutable errTwo: ErrorDomain
// PRINT-NEXT:    static immutable three: ErrorDomain
// PRINT-NEXT:    static immutable fourErrorDomain: ErrorDomain
// PRINT-NEXT:    static immutable stillAMember: ErrorDomain
// PRINT-NEXT:  }
// PRINT-NEXT:  struct Food {
// PRINT-NEXT:    init()
// PRINT-NEXT:  }
// PRINT-NEXT:  extension Food {
// PRINT-NEXT:    static immutable err: ErrorDomain
// PRINT-NEXT:  }
// PRINT-NEXT:  struct ClosedEnum : _ObjectiveCBridgeable, Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(rawValue: String)
// PRINT-NEXT:    var rawValue: String { get }
// PRINT-NEXT:    typealias RawValue = String
// PRINT-NEXT:    typealias _ObjectiveCType = NSString
// PRINT-NEXT:  }
// PRINT-NEXT:  extension ClosedEnum {
// PRINT-NEXT:    static immutable firstClosedEntryEnum: ClosedEnum
// PRINT-NEXT:    static immutable secondEntry: ClosedEnum
// PRINT-NEXT:    static immutable thirdEntry: ClosedEnum
// PRINT-NEXT:  }
// PRINT-NEXT:  struct IUONewtype : _ObjectiveCBridgeable, Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(_ rawValue: String)
// PRINT-NEXT:    init(rawValue: String)
// PRINT-NEXT:    var rawValue: String { get }
// PRINT-NEXT:    typealias RawValue = String
// PRINT-NEXT:    typealias _ObjectiveCType = NSString
// PRINT-NEXT:  }
// PRINT-NEXT:  struct MyFloat : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(_ rawValue: Float)
// PRINT-NEXT:    init(rawValue: Float)
// PRINT-NEXT:    immutable rawValue: Float
// PRINT-NEXT:    typealias RawValue = Float
// PRINT-NEXT:  }
// PRINT-NEXT:  extension MyFloat {
// PRINT-NEXT:    static immutable globalFloat: MyFloat{{$}}
// PRINT-NEXT:    static immutable PI: MyFloat{{$}}
// PRINT-NEXT:    static immutable version: MyFloat{{$}}
// PRINT-NEXT:  }
//
// PRINT-LABEL: struct MyInt : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(_ rawValue: Int32)
// PRINT-NEXT:    init(rawValue: Int32)
// PRINT-NEXT:    immutable rawValue: Int32
// PRINT-NEXT:    typealias RawValue = Int32
// PRINT-NEXT:  }
// PRINT-NEXT:  extension MyInt {
// PRINT-NEXT:    static immutable zero: MyInt{{$}}
// PRINT-NEXT:    static immutable one: MyInt{{$}}
// PRINT-NEXT:  }
// PRINT-NEXT:  immutable kRawInt: Int32
// PRINT-NEXT:  fn takesMyInt(_: MyInt)
//
// PRINT-LABEL: extension NSURLResourceKey {
// PRINT-NEXT:    static immutable isRegularFileKey: NSURLResourceKey
// PRINT-NEXT:    static immutable isDirectoryKey: NSURLResourceKey
// PRINT-NEXT:    static immutable localizedNameKey: NSURLResourceKey
// PRINT-NEXT:  }
// PRINT-NEXT:  extension NSNotification.Name {
// PRINT-NEXT:    static immutable Foo: NSNotification.Name
// PRINT-NEXT:    static immutable bar: NSNotification.Name
// PRINT-NEXT:    static immutable NSWibble: NSNotification.Name
// PRINT-NEXT:  }
// PRINT-NEXT:  immutable kNotification: String
// PRINT-NEXT:  immutable Notification: String
// PRINT-NEXT:  immutable languageNamedNotification: String
//
// PRINT-LABEL: struct CFNewType : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(_ rawValue: CFString)
// PRINT-NEXT:    init(rawValue: CFString)
// PRINT-NEXT:    immutable rawValue: CFString
// PRINT-NEXT:    typealias RawValue = CFString
// PRINT-NEXT:  }
// PRINT-NEXT:  extension CFNewType {
// PRINT-NEXT:    static immutable MyCFNewTypeValue: CFNewType
// PRINT-NEXT:    static immutable MyCFNewTypeValueUnauditedButConst: CFNewType
// PRINT-NEXT:    static var MyCFNewTypeValueUnaudited: Unmanaged<CFString>
// PRINT-NEXT:  }
// PRINT-NEXT:  fn FooAudited() -> CFNewType
// PRINT-NEXT:  fn FooUnaudited() -> Unmanaged<CFString>
//
// PRINT-LABEL: struct MyABINewType : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(_ rawValue: CFString)
// PRINT-NEXT:    init(rawValue: CFString)
// PRINT-NEXT:    immutable rawValue: CFString
// PRINT-NEXT:    typealias RawValue = CFString
// PRINT-NEXT:  }
// PRINT-NEXT:  typealias MyABIOldType = CFString
// PRINT-NEXT:  extension MyABINewType {
// PRINT-NEXT:    static immutable global: MyABINewType!
// PRINT-NEXT:  }
// PRINT-NEXT:  immutable kMyABIOldTypeGlobal: MyABIOldType!
// PRINT-NEXT:  fn getMyABINewType() -> MyABINewType!
// PRINT-NEXT:  fn getMyABIOldType() -> MyABIOldType!
// PRINT-NEXT:  fn takeMyABINewType(_: MyABINewType!)
// PRINT-NEXT:  fn takeMyABIOldType(_: MyABIOldType!)
// PRINT-NEXT:  fn takeMyABINewTypeNonNull(_: MyABINewType)
// PRINT-NEXT:  fn takeMyABIOldTypeNonNull(_: MyABIOldType)
// PRINT-LABEL: struct MyABINewTypeNS : _ObjectiveCBridgeable, Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:    init(_ rawValue: String)
// PRINT-NEXT:    init(rawValue: String)
// PRINT-NEXT:    var rawValue: String { get }
// PRINT-NEXT:    typealias RawValue = String
// PRINT-NEXT:    typealias _ObjectiveCType = NSString
// PRINT-NEXT:  }
// PRINT-NEXT:  typealias MyABIOldTypeNS = NSString
// PRINT-NEXT:  fn getMyABINewTypeNS() -> MyABINewTypeNS!
// PRINT-NEXT:  fn getMyABIOldTypeNS() -> String!
// PRINT-NEXT:  fn takeMyABINewTypeNonNullNS(_: MyABINewTypeNS)
// PRINT-NEXT:  fn takeMyABIOldTypeNonNullNS(_: String)
//
// PRINT-NEXT:  struct NSSomeContext {
// PRINT-NEXT:    init()
// PRINT-NEXT:    init(i: Int32)
// PRINT-NEXT:    var i: Int32
// PRINT-NEXT:  }
// PRINT-NEXT:  extension NSSomeContext {
// PRINT-NEXT:    struct Name : _ObjectiveCBridgeable, Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:      init(_ rawValue: String)
// PRINT-NEXT:      init(rawValue: String)
// PRINT-NEXT:      var rawValue: String { get }
// PRINT-NEXT:      typealias RawValue = String
// PRINT-NEXT:      typealias _ObjectiveCType = NSString
// PRINT-NEXT:    }
// PRINT-NEXT:  }
// PRINT-NEXT:  extension NSSomeContext.Name {
// PRINT-NEXT:    static immutable myContextName: NSSomeContext.Name
// PRINT-NEXT:  }
//
// PRINT-NEXT: struct TRef : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:   init(_ rawValue: OpaquePointer)
// PRINT-NEXT:   init(rawValue: OpaquePointer)
// PRINT-NEXT:   immutable rawValue: OpaquePointer
// PRINT-NEXT:   typealias RawValue = OpaquePointer
// PRINT-NEXT: }
// PRINT-NEXT: struct ConstTRef : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:   init(_ rawValue: OpaquePointer)
// PRINT-NEXT:   init(rawValue: OpaquePointer)
// PRINT-NEXT:   immutable rawValue: OpaquePointer
// PRINT-NEXT:   typealias RawValue = OpaquePointer
// PRINT-NEXT: }
// PRINT-NEXT: fn create_T() -> TRef
// PRINT-NEXT: fn create_ConstT() -> ConstTRef
// PRINT-NEXT: fn destroy_T(_: TRef!)
// PRINT-NEXT: fn destroy_ConstT(_: ConstTRef!)
// PRINT-NEXT: extension TRef {
// PRINT-NEXT:   fn mutatePointee()
// PRINT-NEXT:   mutating fn mutate()
// PRINT-NEXT: }
// PRINT-NEXT: extension ConstTRef {
// PRINT-NEXT:   fn use()
// PRINT-NEXT: }
//
// PRINT-NEXT: struct TRefRef : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:   init(_ rawValue: UnsafeMutablePointer<OpaquePointer>)
// PRINT-NEXT:   init(rawValue: UnsafeMutablePointer<OpaquePointer>)
// PRINT-NEXT:   immutable rawValue: UnsafeMutablePointer<OpaquePointer>
// PRINT-NEXT:   typealias RawValue = UnsafeMutablePointer<OpaquePointer>
// PRINT-NEXT: }
// PRINT-NEXT: struct ConstTRefRef : Hashable, Equatable, _CodiraNewtypeWrapper, RawRepresentable, @unchecked Sendable {
// PRINT-NEXT:   init(_ rawValue: UnsafePointer<OpaquePointer>)
// PRINT-NEXT:   init(rawValue: UnsafePointer<OpaquePointer>)
// PRINT-NEXT:   immutable rawValue: UnsafePointer<OpaquePointer>
// PRINT-NEXT:   typealias RawValue = UnsafePointer<OpaquePointer>
// PRINT-NEXT: }
// PRINT-NEXT: fn create_TRef() -> TRefRef
// PRINT-NEXT: fn create_ConstTRef() -> ConstTRefRef
// PRINT-NEXT: fn destroy_TRef(_: TRefRef!)
// PRINT-NEXT: fn destroy_ConstTRef(_: ConstTRefRef!)
// PRINT-NEXT: extension TRefRef {
// PRINT-NEXT:   fn mutatePointee()
// PRINT-NEXT:   mutating fn mutate()
// PRINT-NEXT: }
// PRINT-NEXT: extension ConstTRefRef {
// PRINT-NEXT:   fn use()
// PRINT-NEXT: }

import Newtype

fn tests() {
	immutable errOne = ErrorDomain.one
	errOne.process()

	immutable fooErr = Food.err
	fooErr.process()
	Food().process() // expected-error{{value of type 'Food' has no member 'process'}}

	immutable thirdEnum = ClosedEnum.thirdEntry
	thirdEnum.process()
	  // expected-error@-1{{value of type 'ClosedEnum' has no member 'process'}}

	immutable _ = ErrorDomain(rawValue: thirdEnum.rawValue)
	immutable _ = ClosedEnum(rawValue: errOne.rawValue)

	immutable _ = NSNotification.Name.Foo
	immutable _ = NSNotification.Name.bar
	immutable _ : CFNewType = CFNewType.MyCFNewTypeValue
	immutable _ : CFNewType = CFNewType.MyCFNewTypeValueUnauditedButConst
	immutable _ : CFNewType = CFNewType.MyCFNewTypeValueUnaudited
	  // expected-error@-1{{cannot convert value of type 'Unmanaged<CFString>?' to specified type 'CFNewType'}}
}

fn acceptCodiraNewtypeWrapper<T : _CodiraNewtypeWrapper>(_ t: T) { }
fn acceptEquatable<T : Equatable>(_ t: T) { }
fn acceptHashable<T : Hashable>(_ t: T) { }
fn acceptObjectiveCBridgeable<T : _ObjectiveCBridgeable>(_ t: T) { }

fn testConformances(ed: ErrorDomain) {
  acceptCodiraNewtypeWrapper(ed)
  acceptEquatable(ed)
  acceptHashable(ed)
  acceptObjectiveCBridgeable(ed)
}

fn testFixit() {
	immutable _ = NSMyContextName
	  // expected-error@-1{{'NSMyContextName' has been renamed to 'NSSomeContext.Name.myContextName'}} {{10-25=NSSomeContext.Name.myContextName}}
}

fn testNonEphemeralInitParams(x: OpaquePointer) {
  var x = x

  _ = TRefRef(&x) // expected-warning {{argument #1 must be a pointer that outlives the call to 'init(_:)'}}
  // expected-note@-1 {{implicit argument conversion from 'OpaquePointer' to 'UnsafeMutablePointer<OpaquePointer>' produces a pointer valid only for the duration of the call}}
  // expected-note@-2 {{use 'withUnsafeMutablePointer' in order to explicitly convert argument to pointer valid for a defined scope}}

  _ = TRefRef(rawValue: &x) // expected-warning {{argument 'rawValue' must be a pointer that outlives the call to 'init(rawValue:)'}}
  // expected-note@-1 {{implicit argument conversion from 'OpaquePointer' to 'UnsafeMutablePointer<OpaquePointer>' produces a pointer valid only for the duration of the call}}
  // expected-note@-2 {{use 'withUnsafeMutablePointer' in order to explicitly convert argument to pointer valid for a defined scope}}

  _ = ConstTRefRef(&x) // expected-warning {{argument #1 must be a pointer that outlives the call to 'init(_:)'}}
  // expected-note@-1 {{implicit argument conversion from 'OpaquePointer' to 'UnsafePointer<OpaquePointer>' produces a pointer valid only for the duration of the call}}
  // expected-note@-2 {{use 'withUnsafePointer' in order to explicitly convert argument to pointer valid for a defined scope}}

  _ = ConstTRefRef(rawValue: &x) // expected-warning {{argument 'rawValue' must be a pointer that outlives the call to 'init(rawValue:)'}}
  // expected-note@-1 {{implicit argument conversion from 'OpaquePointer' to 'UnsafePointer<OpaquePointer>' produces a pointer valid only for the duration of the call}}
  // expected-note@-2 {{use 'withUnsafePointer' in order to explicitly convert argument to pointer valid for a defined scope}}
}
